fixed spacing issue of info on mobile version

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -234,7 +234,7 @@ nav a:hover {
 
     #info {
         align-items: flex-start;
-        top: 2320px;
+        top: 2440px;
         left: 2px;
         transition: none 0s;
     }
